# awesome-agent-dataset

./: .gitignore  CATALOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentds/: __init__.py  audit.py  catalog.py  cli.py  dedup.py  normalizers.py  pipeline.py  push.py  quality.py  registry.py  schema.py  seed_index.py
configs/: registry.yaml
scripts/: wait_and_push.sh
tests/: test_normalizers.py
