[project]
name = "agentds"
version = "0.1.0"
description = "Catalog + toolkit for building model-agnostic agent-SFT datasets: normalize, dedup, and quality-stratify HF agent/tool-use datasets into one OpenAI-style schema."
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0",
    "huggingface_hub>=0.25",
    "pyarrow>=15",
    "datasketch>=1.6",
    "xxhash>=3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "teich>=0.2",  # decoder for HF `format: agent-traces` datasets
]

[project.scripts]
agentds = "agentds.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentds*"]
